[metadata]
name = cnmf
version = 1.3.0
author = Dylan Kotliar
author_email = dylkot@gmail.com
description = Consensus NMF for scRNA-Seq data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dylkot/cNMF/tree/a8de2b8eea94bdead37dda35968ee5b06d30020e
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src

[options.packages.find]
where = src